<resources>
    <string name="app_name">Bikes Trip App</string>
    <string name="minimum_password">minimum passwordddd</string>
    <string name="auth_failed">auth failedddd</string>
    <string name="txt_about_1">Bikes Locator App was created in order to the user be able to find the bike stations available in the selected city and create a favorite trip.</string>
    <string name="txt_about_3">The App basically consists of a registration part and the main content. The registration part is where the user can login if na account already exist, change the password or receive na email to remember the password. If the account does not exist the user can create a new one.</string>
    <string name="txt_about_2">The main content basically consists of selecting a city in the list in order to see where the Bike Stations are located. The users also can save their favorite trips adding the start and end location, with the day, title and description of it.</string>
    <string name="btn_stations">Stations</string>
    <string name="btn_map">Map</string>
    <string name="btn_about">About</string>
    <string name="img_bike">Cyclist</string>
    <string name="txt_about_4">Created by Romulo Gomes - Clinton Bates - Dionisio Prazeres - Trizer Jonseni - Joel Carlos - David Kenny - Bwana Magombo</string>
    <string name="txt_about_5">Linkedin: https://www.linkedin.com/in/rgomesprofessional</string>
    <string name="txt_about_6">Web Site: http://rgomes.16mb.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps_track">Map</string>
    <string name="btn_start_track">Start Track</string>
    <string name="btn_finish_track">Finish Track</string>
    <string name="txt_ready">Wait a second!</string>
</resources>
