<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rgome.bikestripapp.AppContent.About">

    <TextView
        android:id="@+id/txtAbout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_about_1"
        android:textColor="@android:color/black"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/txtAbout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtAbout1"
        android:layout_marginTop="25dp"
        android:text="@string/txt_about_2"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/txtAbout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtAbout2"
        android:layout_marginTop="27dp"
        android:text="@string/txt_about_3"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/txtAbout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:text="@string/txt_about_4" />

    <TextView
        android:id="@+id/txtAbout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtAbout4"
        android:layout_marginTop="12dp"
        android:autoLink="web"
        android:clickable="false"
        android:text="@string/txt_about_5"
        android:textColorLink="@android:color/holo_blue_dark" />

    <TextView
        android:id="@+id/txtAbout6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtAbout5"
        android:layout_marginTop="13dp"
        android:autoLink="web"
        android:text="@string/txt_about_6"
        android:textColorLink="@android:color/holo_blue_dark" />

</RelativeLayout>
